# simple_text_interface

./: Cargo.toml  README.md
src/: main.rs
