[package]
name = "simple_text_interface"
version = "0.1.0"
edition = "2018"
authors = ["Stepanov Denis <stepanov.d.m@yandex.ru>"]
description = "Implementation of fmt::Display for the vec structure with the completed task from the book 'Rust by Example'."
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
